--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,18 +8,20 @@ android {
         applicationId "com.github.abusalam.ghatalme2015"
         minSdkVersion 15
         targetSdkVersion 21
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 4
+        versionName "1.0.3"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'volley', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    //compile 'com.squareup.picasso:picasso:2.5.2'
+    compile project(':volley')
 }
